logs/Slang/generated/hdlconv/hdlconvertor_p469.sv.log
name: hdlconvertor_p469
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:3:3: error: language feature not yet supported
  default clocking @(negedge clk1); endclocking
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:3:19: error: expected identifier
  default clocking @(negedge clk1); endclocking
                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:4:3: error: expected member
  default disable iff rst1;
  ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:6:3: error: language feature not yet supported
  property p_triggers(start_event, end_event, form, clk = $inferred_clock,
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:8:55: error: expected expression
    @clk disable iff (rst) (start_event ##0 end_event[->1]) |=> form;
                                                      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:11:3: error: language feature not yet supported
  property p_multiclock(clkw, clkx = $inferred_clock, clky, w, x, y, z);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:15:3: error: language feature not yet supported
  a1: assert property (p_triggers(a, b, c));
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:17:3: error: language feature not yet supported
  a2: assert property (p_triggers(a, b, c, posedge clk1, 1'b0) );
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:17:44: error: expected expression
  a2: assert property (p_triggers(a, b, c, posedge clk1, 1'b0) );
                                           ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:17:44: error: expected argument
  a2: assert property (p_triggers(a, b, c, posedge clk1, 1'b0) );
                                           ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:17:51: error: expected ','
  a2: assert property (p_triggers(a, b, c, posedge clk1, 1'b0) );
                                                  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:23:7: error: language feature not yet supported
      a3: assert property (p_triggers(a, b, c));
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:27:3: error: language feature not yet supported
  a4: assert property(p_multiclock(negedge clk2, , posedge clk1,a, b, c, d) );
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:27:36: error: expected ')'
  a4: assert property(p_multiclock(negedge clk2, , posedge clk1,a, b, c, d) );
                                   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:27:36: error: expected member
  a4: assert property(p_multiclock(negedge clk2, , posedge clk1,a, b, c, d) );
                                   ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:27:36: error: expected statement
  a4: assert property(p_multiclock(negedge clk2, , posedge clk1,a, b, c, d) );
                                   ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p469.sv:27:36: error: expected argument
  a4: assert property(p_multiclock(negedge clk2, , posedge clk1,a, b, c, d) );
                                   ^
